@@ -3,10 +3,7 @@ package CodeSquad.IssueTracker.issue;
 import CodeSquad.IssueTracker.comment.CommentService;
 import CodeSquad.IssueTracker.comment.dto.CommentResponseDto;
 import CodeSquad.IssueTracker.home.dto.IssueFilterCondition;
-import CodeSquad.IssueTracker.issue.dto.FilteredIssueDto;
-import CodeSquad.IssueTracker.issue.dto.IssueCreateRequest;
-import CodeSquad.IssueTracker.issue.dto.IssueDetailResponse;
-import CodeSquad.IssueTracker.issue.dto.IssueUpdateDto;
+import CodeSquad.IssueTracker.issue.dto.*;
 import CodeSquad.IssueTracker.issueAssignee.IssueAssigneeRepository;
 import CodeSquad.IssueTracker.issueAssignee.IssueAssigneeService;
 import CodeSquad.IssueTracker.issueAssignee.dto.IssueAssigneeResponse;
@@ -43,19 +40,25 @@ public class IssueService {
     private final CommentService commentService;
     private final Uploader s3Uploader;
 
-    public Issue save(Issue issue){
-        return issueRepository.save(issue);
-    }
-
-    public void update(Long issueId, IssueUpdateDto updateParam){
+    public IssueDetailResponse update(Long issueId, IssueUpdateDto updateParam) {
         issueRepository.update(issueId, updateParam);
+
+        if(updateParam.getAssigneeIds() != null && !updateParam.getAssigneeIds().isEmpty()) {
+            issueAssigneeService.assignAssignees(issueId, updateParam.getAssigneeIds());
+        }
+
+        if(updateParam.getLabelIds() != null && !updateParam.getLabelIds().isEmpty()) {
+            issueLabelService.assignLabels(issueId, updateParam.getLabelIds());
+        }
+
+        return toDetailResponse(findById(issueId).get());
     }
 
-    public Optional<Issue> findById(Long issueId){
+    public Optional<Issue> findById(Long issueId) {
         return issueRepository.findById(issueId);
     }
 
-    public Iterable<Issue> findAll(){
+    public Iterable<Issue> findAll() {
         return issueRepository.findAll();
     }
 
@@ -72,9 +75,9 @@ public class IssueService {
         issue.setLastModifiedAt(LocalDateTime.now());
 
         if (files != null && !files.isEmpty()) {
-            MultipartFile file = files.get(0);
-            String imageUrl = s3Uploader.upload(file);
-            issue.setImageUrl(imageUrl);
+            MultipartFile file = files.getFirst();
+            String issueFileUrl = s3Uploader.upload(file);
+            issue.setIssueFileUrl(issueFileUrl);
         }
 
         Issue saved = issueRepository.save(issue);
@@ -91,26 +94,41 @@ public class IssueService {
     }
 
     public IssueDetailResponse toDetailResponse(Issue issue) {
+        // ✅ 작성자 정보 조회
+        User author = userService.findById(issue.getAuthorId()).orElseThrow();
+        IssueWithAuthorInfo issueWithAuthorInfo = IssueWithAuthorInfo.from(issue, author);
+
         IssueDetailResponse response = new IssueDetailResponse();
-        response.setIssue(issue);
+        response.setIssue(issueWithAuthorInfo);
 
-        // ✅ 1. Assignees
-        List<IssueAssigneeResponse> issueAssignees = issueAssigneeService.findAssigneeResponsesByIssueId(issue.getIssueId());
+        // ✅ Assignees 정보 조회
+        List<IssueAssigneeResponse> assignees =
+                issueAssigneeService.findAssigneeResponsesByIssueId(issue.getIssueId());
+        response.setAssignees(assignees);
 
+        // ✅ Labels 정보 조회
+        List<IssueLabelResponse> labels =
+                issueLabelService.findIssueLabelResponsesByIssueId(issue.getIssueId());
+        response.setLabels(labels);
 
-        // ✅ 2. Labels
-        List<IssueLabelResponse> issueLabels = issueLabelService.findIssueLabelResponsesByIssueId(issue.getIssueId());
+        // ✅ Milestone 정보 조회
+        MilestoneResponse milestone =
+                milestoneService.findMilestoneResponsesByIssueId(issue.getIssueId());
+        response.setMilestone(milestone);
 
-        // ✅ 3. Milestone
-        MilestoneResponse milestones = milestoneService.findMilestoneResponsesByIssueId(issue.getIssueId());
-
-        // ✅ 4. Comments
-        List<CommentResponseDto> comments = commentService.findCommentResponsesByIssueId(issue.getIssueId());
-
-        response.setAssignees(issueAssignees);
-        response.setLabels(issueLabels);
+        // ✅ Comments 정보 조회
+        List<CommentResponseDto> comments =
+                commentService.findCommentResponsesByIssueId(issue.getIssueId());
         response.setComments(comments);
-        response.setMilestone(milestones);
+
+        Optional<User> byId = userService.findById(response.getIssue().getAuthorId());
+
+        if (byId.isPresent()) {
+            User author = byId.get();
+            response.setAuthorName(author.getNickName());
+            response.setAuthorProfileImage(author.getProfileImageUrl());
+        }
+
 
         return response;
     }
@@ -127,8 +145,8 @@ public class IssueService {
     }
 
     public int getIssueMaxPage(IssueFilterCondition condition) {
-        int totalCount =  issueRepository.countFilteredIssuesByIsOpen(condition.getIsOpen(), condition);
-        return  (int) Math.ceil((double) totalCount / LIMIT_SIZE);
+        int totalCount = issueRepository.countFilteredIssuesByIsOpen(condition.getIsOpen(), condition);
+        return (int) Math.ceil((double) totalCount / LIMIT_SIZE);
     }
 
     public int countIssuesByOpenStatus(boolean isOpen, IssueFilterCondition condition) {
